name:                gitit
version:             0.13.0.0
Cabal-version:       >= 1.8
build-type:          Simple
synopsis:            Wiki using happstack, git or darcs, and pandoc.
description:         Gitit is a wiki backed by a git, darcs, or mercurial
                     filestore.  Pages and uploaded files can be modified either
                     directly via the VCS's command-line tools or through
                     the wiki's web interface. Pandoc is used for markup
                     processing, so pages may be written in
                     (extended) markdown, reStructuredText, LaTeX, HTML,
                     or literate Haskell, and exported in ten different
                     formats, including LaTeX, ConTeXt, DocBook, RTF,
                     OpenOffice ODT, and MediaWiki markup.
                     .
                     Notable features include
                     .
                     * plugins: dynamically loaded page
                       transformations written in Haskell (see
                       "Network.Gitit.Interface")
                     .
                     * conversion of TeX math to MathML for display in
                       web browsers
                     .
                     * syntax highlighting of source code
                       files and code snippets
                     .
                     * Atom feeds (site-wide and per-page)
                     .
                     * a library, "Network.Gitit", that makes it simple
                       to include a gitit wiki in any happstack application
                     .
                     For usage information:  @gitit --help@

category:            Network
license:             GPL
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
bug-reports:         http://github.com/jgm/gitit/issues
stability:           experimental
data-files:          data/static/css/print.css,
                     data/static/css/ie.css, data/static/css/highlighting.css,
                     data/static/css/custom.css,
                     data/static/img/icons/feed.png,
                     data/static/img/icons/folder.png, data/static/img/icons/page.png,
                     data/static/robots.txt,
                     data/default.conf,
                     data/templates/page.st,
                     CHANGES, README.markdown, YUI-LICENSE, BLUETRIP-LICENSE, TANGOICONS

Source-repository head
  type:          git
  location:      git://github.com/jgm/gitit.git

Library
  hs-source-dirs:    src
  exposed-modules:   Network.Gitit, Network.Gitit.ContentTransformer,
                     Network.Gitit.Types, Network.Gitit.Framework,
                     Network.Gitit.Initialize, Network.Gitit.Config,
                     Network.Gitit.Layout,
                     Network.Gitit.Util, Network.Gitit.Server
                     Network.Gitit.Cache, Network.Gitit.State,
                     Network.Gitit.Export, Network.Gitit.Interface,
                     Network.Gitit.Handlers, Network.Gitit.Mgnl,
                     Network.Gitit.Plugins,
                     Network.Gitit.Page,
                     Network.Gitit.Compat.Except
  build-depends:     base >= 4.9 && < 5,
                     syb,
                     filepath,
                     safe,
                     parsec,
                     pretty,
                     xhtml,
                     containers,
                     process,
                     filepath,
                     directory,
                     mtl,
                     old-time,
                     pandoc >= 2.9 && < 2.10,
                     pandoc-types >= 1.20 && < 1.21,
                     skylighting >= 0.8.2.3 && < 0.9,
                     bytestring,
                     text,
                     random,
                     utf8-string >= 0.3 && < 1.1,
                     SHA > 1,
                     HTTP >= 4000.0,
                     HStringTemplate >= 0.6 && < 0.9,
                     old-locale,
                     time,
--                      recaptcha >= 0.1,
                     filestore >= 0.6.4 && < 0.7,
                     zlib >= 0.5 && < 0.7,
                     url >= 2.1,
                     happstack-server >= 7.5 && < 7.7,
                     base64-bytestring >= 0.1,
                     xml >= 1.3.5,
                     hslogger >= 1,
                     ConfigFile >= 1,
--                      feed >= 1.0 && < 1.4,
                     xml-types >= 0.3,
                     xss-sanitize >= 0.3 && < 0.4,
                     tagsoup >= 0.13 && < 0.15,
                     blaze-html >= 0.4 && < 0.10,
--                      json >= 0.4 && < 0.11,
                     uri-bytestring >= 0.2.3.3,
                     split,
--                      hoauth2 >= 1.3.0 && < 1.12,
--                      xml-conduit >= 1.5 && < 1.10,
--                      http-conduit >= 2.1.6 && < 2.4,
--                      http-client-tls >= 0.2.2 && < 0.4,
                     aeson >= 0.7 && < 1.5,
                     uuid >= 1.3 && < 1.4,
                     network-uri >= 2.6,
                     network >= 2.6 && < 3.2,
                     network-bsd >= 2.8.1 && < 2.9,
                     doctemplates >= 0.7.1,
                     exceptions >= 0.10,
                     http-streams >= 0.8,
                     io-streams >= 1.5
  extensions:        CPP
  ghc-options:       -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options:  -fprof-auto-exported

Executable           gitit
  hs-source-dirs:    .
  main-is:           gitit.hs
  build-depends:     base >=3 && < 5,
                     gitit,
                     mtl,
                     hslogger,
                     bytestring,
                     text,
                     utf8-string,
                     directory,
                     network-uri >= 2.6,
                     network >= 2.6
  extensions:        CPP
  ghc-options:       -Wall -threaded -fno-warn-unused-do-bind
  ghc-prof-options:  -fprof-auto-exported -rtsopts

Executable           expireGititCache
  hs-source-dirs:    .
  main-is:           expireGititCache.hs
  build-depends:     base >= 4.9 && < 5, HTTP, url, filepath, syb,
                     network-uri >= 2.6,
                     network >= 2.6
  ghc-options:       -Wall

